--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+aiohttp==2.3.7
 asn1crypto==0.24.0
+async-timeout==3.0.0
 asyncio==3.4.3
+balebot==1.2.5
 beautifulsoup4==4.6.0
 certifi==2018.1.18
+cffi==1.11.5
 chardet==3.0.4
 click==6.7
 cryptography==2.1.4
@@ -11,6 +15,7 @@ django-js-asset==1.1.0
 enum34==1.1.6
 Flask==1.0.2
 Flask-SQLAlchemy==2.3.2
+graypy==0.2.14
 html5lib==0.999999999
 idna==2.6
 image==1.5.24
@@ -18,22 +23,23 @@ inflection==0.3.1
 ipaddr==2.2.0
 ipaddress==1.0.17
 itsdangerous==0.24
+jdatetime==3.0.0
+jeepney==0.3.1
 Jinja2==2.10
 keyring==10.6.0
 keyrings.alt==3.0
-libvirt-python==4.0.0
 lxml==4.2.1
 MarkupSafe==1.0
-MySQL-python==1.2.5
+multidict==4.3.1
 mysqlclient==1.3.10
 olefile==0.45.1
 ORM==1.1.0
-PAM==0.4.2
 pexpect==4.2.1
 Pillow==5.1.0
-pycairo==1.16.2
+psycopg2==2.7.5
+ptyprocess==0.6.0
+pycparser==2.18
 pycrypto==2.6.1
-pygobject==3.26.1
 pyinotify==0.9.6
 pyOpenSSL==17.5.0
 pyserial==3.4
@@ -43,7 +49,8 @@ requests==2.18.4
 SecretStorage==2.3.1
 six==1.11.0
 SQLAlchemy==1.2.11
-unity-lens-photos==1.0
 urllib3==1.22
 webencodings==0.5
 Werkzeug==0.14.1
+XlsxWriter==1.1.0
+yarl==1.2.6
